--- a/Background/BackgroundAnimation.css
+++ b/Background/BackgroundAnimation.css
@@ -1,33 +1,50 @@
 #image-display {
   display: flex; /* Change this from block */
   flex-direction: column; /* Changes the direction of the child elements to be in a column */
-  height: calc(100vh - 50px);
+  height: calc(100vh - 60px);
 }
 
-#large-image, #thumbnail-grid {
-  flex: 1;
-}
 
 #large-image {
-  width: 100%;
-  height: 75%;
+  width: 75%;
+  height: 100%;
+  border: 1px solid black;
+}
+
+.fade-in {
+  animation: fadeIn 0.75s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
 }
 
 #thumbnail-grid {
-  display: inline-grid; /* Change this from flex */
-  grid-template-columns: repeat(10, 1fr); /* Creates a grid with 5 columns */
-  grid-auto-rows: minmax(50px, auto); /* Sets a minimum and maximum height for the rows */
-  grid-gap: 5px; /* Adds a gap between the thumbnails */
-  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(10, minmax(100px, 1fr)); /* Creates a grid with 10 columns and the size of each column will be minimum 100px and maximum 1fr */
+  grid-template-rows: minmax(100px, 1fr); /* The size of each row will be minimum 100px and maximum 1fr */
+  grid-gap: 10px;
+  margin-top: 6px;
+  margin-left: 10px;
+  margin-right: 10px;
   align-items: center;
   justify-content: center;
+  box-sizing: content-box;
 }
 
 #thumbnail-grid img {
+  width: 100px; /* Fix the width of the images */
+  height: 200px; /* Fix the height of the images */
   width: 100%;
   height: auto;
   cursor: pointer;
-
+  object-fit: contain;
+  box-sizing: content-box;
   
 }
 
@@ -35,4 +52,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  box-sizing: content-box;
+  border: 1px solid black;
 }
