--- a/looks.css
+++ b/looks.css
@@ -1,4 +1,7 @@
-body {background-color: rgb(219, 219, 219);}
+body {
+  background-color: rgb(219, 219, 219);
+margin: 0;
+}
 
 #toolbar {
     display: grid;
@@ -28,14 +31,13 @@ body {background-color: rgb(219, 219, 219);}
     width: 40px;
     height: 40px;
     margin-right: 20px;
+    margin-left: 10px;
     border: 2px solid black;
   }
 
   #home-icon:hover {
     cursor: hand;
   }
-  
-  
   
   #footer {
     position: fixed;
@@ -48,34 +50,39 @@ body {background-color: rgb(219, 219, 219);}
 
 #text-container {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    padding: 10;
+    padding-bottom: 21;
+    right: 8;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-    width: 650px;
-    z-index: 2;
+   background-color:  #429dca;
+height: 100%;
+width: 24%;
+border: 1px solid black;
+}
+
+#imageAndText {
+  position: relative;
+  height: 84%;
+  margin-left: 10px;
+  margin-top: 5px;
 }
 
 #text-container p {
-    color: black;
-    font-size: 22px;
-    font-family: Arial, sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 23.5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
 }
 
 #text-container h1 {
-    color: #333;
-    font-size: 30px;
-    font-family: Arial, sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 37px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    text-align: left;
+    text-align: center;
     text-transform: uppercase;
     letter-spacing: 2px;
-    padding-left: 9px;
     text-decoration: underline;
 }
 
@@ -110,4 +117,27 @@ body {background-color: rgb(219, 219, 219);}
     transform: scaleX(1);
     transform-origin: bottom left;
     
+  }
+
+  #code-container {
+    background-color: #f0f0f0;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  #code-display {
+    font-family: monospace;
+    font-size: 16px;
+  }
+  #button-menu {
+    text-align: center;
+  }
+  .file-button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
   }
