--- a/looks.css
+++ b/looks.css
@@ -51,7 +51,7 @@ margin: 0;
 #text-container {
     position: absolute;
     top: 0;
-    padding: 10;
+    padding: 3;
     padding-bottom: 10;
     right: 8;
     text-align: center;
@@ -59,6 +59,8 @@ margin: 0;
 height: 100%;
 width: 24%;
 border: 1px solid black;
+max-height: 549px;
+
 }
 
 #imageAndText {
@@ -74,17 +76,19 @@ border: 1px solid black;
     font-size: 26px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
+    display: contents;
 }
 
 #text-container h1 {
     color: rgb(255, 255, 255);
-    font-size: 37px;
+    font-size: 32px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 2px;
     text-decoration: underline;
+    
 }
 
 #hover-underline-animation {
